# sleuthkit-mactime.py

./: README.md  pyproject.toml  test.fish
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish-release.yaml
src/mactime/: mactime.pl  mactime.py
