[project]
name = "mactime"
version = "1.0.0"
description = "A Python reimplementation of mactime.pl from The Sleuth Kit®."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytz>=2025.2",
]

[project.scripts]
mactime = "mactime.mactime:main"
 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
